objects/zkups__CustomAddressSourceField__c.object
<CustomObject>
    <fields>
        <fullName>zkups__CustomAddressSource__c</fullName>
        <label>UPS Custom Address Source</label>
        <referenceTo>zkups__CustomAddressSource__c</referenceTo>
        <relationshipLabel>UPS Custom Address Source Fields</relationshipLabel>
        <relationshipName>UPS_Custom_Address_Source_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkups__FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FieldName__c</fullName>
        <label>Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FieldType__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FieldValue__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>UPS Custom Address Source Field</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>UPS Custom Address Source Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Custom Address Source Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>